# command-line-rust

./: Cargo.toml  README.md
cat/: Cargo.toml
cat/src/: main.rs
cat/tests/: cli.rs
cat/tests/expected/: all.b.out  all.n.out  all.out
cut/: Cargo.toml
cut/src/: main.rs
cut/tests/: cli.rs
find/: Cargo.toml  cp-outs.sh  mk-outs.sh
find/src/: main.rs
find/tests/: cli.rs
head/: Cargo.toml
head/src/: main.rs
head/tests/: cli.rs
uniq/: Cargo.toml
uniq/src/: main.rs
uniq/tests/: cli.rs
uniq/tests/expected/: t3.txt.c.out  t4.txt.c.out
wc/: Cargo.toml
wc/src/: main.rs
wc/tests/: cli.rs
