[workspace]
resolver = "2"

members = ["head", "cat", "wc", "uniq", "find", "cut"]

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.4.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = "0.9.1"
regex = "1.12.3"
tempfile = "3.10.0"
walkdir = "2.5.0"
